--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-    "name": "s1mon",
-    "version": "1.1.0",
-    "description": "",
-    "main": "index.js",
-    "watch": {
-        "build": "src/**/*.js"
-    },
-    "scripts": {
-        "build": "browserify src/index.js -o build/i.js -d -t [ babelify --presets [ es2015 ] ]",
-        "watch": "npm-watch"
-    },
-    "author": "erikpantzar",
-    "license": "ISC",
-    "devDependencies": {
-        "babel-preset-es2015": "^6.14.0",
-        "babelify": "^7.3.0",
-        "browserify": "^13.1.0",
-        "npm-watch": "^0.1.6"
-    }
+  "name": "s1mon",
+  "version": "1.1.0",
+  "description": "",
+  "main": "index.js",
+  "watch": {
+    "build": "src/**/*.js"
+  },
+  "scripts": {
+    "build": "browserify src/index.js -o build/i.js -d -t [ babelify --presets [ es2015 ] ]",
+    "watch": "npm-watch"
+  },
+  "author": "erikpantzar",
+  "license": "ISC",
+  "devDependencies": {
+    "babel-preset-es2015": "^6.14.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
+      "npm-watch": "^0.1.6",
+      "whatwg-fetch": "^1.0.0"
+  }
 }
