--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "build": "browserify src/index.js -o build/i.js -d -t [ babelify --presets [ es2015 ] ]",
-    "watch": "npm-watch"
+    "watch": "npm-watch",
+    "build-css": "node-sass --include-path scss scss/index.scss main.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "author": "erikpantzar",
   "license": "ISC",
@@ -16,7 +18,9 @@
     "babel-preset-es2015": "^6.14.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
-      "npm-watch": "^0.1.6",
-      "whatwg-fetch": "^1.0.0"
+    "node-sass": "^3.8.0",
+    "nodemon": "^1.10.2",
+    "npm-watch": "^0.1.6",
+    "whatwg-fetch": "^1.0.0"
   }
 }
